@@ -1,9 +1,0 @@
-# ----------------------------------------------------------------------
-# This configuration enables bit-precise analysis for
-# predicate analysis configuration based on UFs
-# ----------------------------------------------------------------------
-
-#include predicateAnalysis-PredAbsRefiner-ABEl-UF.properties
-
-# Enable bit-precise analysis
-#include includes/predicateAnalysis-bitprecise.properties
