@@ -1,43 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE benchmark SYSTEM "benchmark.dtd">
-<benchmark tool="cpachecker" timelimit="60" hardtimelimit="90" memlimit="3000" cpuCores="2">
-  <!-- try to make it more deterministic -->
-  <option name="-setprop">cpa.predicate.mathsat5.furtherOptions=random_seed=42</option>
-  <option name="-noout"/>
-  <option name="-spec">sv-comp</option>
-  <option name="-heap">2000M</option>
-  <option name="-setprop">limits.time.cpu=1min</option>
-
-  <sourcefiles>
-    <includesfile>../programs/simple/simple.set</includesfile>
-    <includesfile>../programs/benchmarks/Simple.set</includesfile>
-    <includesfile>../programs/benchmarks/ControlFlowInteger.set</includesfile>
-    <includesfile>../programs/benchmarks/HeapManipulation.set</includesfile>
-    <includesfile>../programs/benchmarks/Loops.set</includesfile>
-    <includesfile>../programs/benchmarks/Sequentialized.set</includesfile>
-    <exclude>../programs/benchmarks/seq-mthreaded/*</exclude>
-    <exclude>../programs/benchmarks/seq-pthread/*</exclude>
-  </sourcefiles>
-  <sourcefiles>
-    <includesfile>integration-DeviceDrivers64.set</includesfile>
-    <option name="-skipRecursion"/>
-    <option name="-64"/>
-  </sourcefiles>
-
-  <rundefinition name="ABElf">
-    <option name="-predicateAnalysis-PredAbsRefiner-ABElf-UF" />
-  </rundefinition>
-
-  <rundefinition name="ABEl">
-    <option name="-predicateAnalysis-PredAbsRefiner-ABEl-UF" />
-  </rundefinition>
-
-  <columns>
-    <column title="post" numberOfDigits="1">Time for post operator</column>
-    <column title="path" numberOfDigits="1">Time for path formula creation</column>
-    <column title="precSolving" numberOfDigits="1">Solving time</column>
-    <column title="SMTwoInt" numberOfDigits="1">Total time for SMT solver</column>
-    <column title="Int" numberOfDigits="1">Interpolant computation</column>
-    <column title="refSAT" numberOfDigits="1">Refinement sat check</column>
-  </columns>
-</benchmark>
