@@ -1,64 +1,0 @@
-<?xml version="1.0"?>
-<!DOCTYPE benchmark SYSTEM "benchmark.dtd">
-<benchmark tool="cpachecker" timelimit="900" hardtimelimit="1000" memlimit="15000" cpuCores="2">
-  <option name="-noout"/>
-  <option name="-spec">sv-comp</option>
-  <option name="-disable-java-assertions"/>
-  <option name="-heap">13000M</option>
-
-  <sourcefiles name="BitVectors">
-    <includesfile>../programs/benchmarks/BitVectors.set</includesfile>
-  </sourcefiles>
-  <sourcefiles name="ControlFlowInteger">
-    <includesfile>../programs/benchmarks/ControlFlowInteger.set</includesfile>
-  </sourcefiles>
-  <sourcefiles name="DeviceDrivers64">
-    <includesfile>../programs/benchmarks/DeviceDrivers64.set</includesfile>
-    <option name="-64"/>
-  </sourcefiles>
-  <sourcefiles name="HeapManipulation">
-    <includesfile>../programs/benchmarks/HeapManipulation.set</includesfile>
-  </sourcefiles>
-  <sourcefiles name="Loops">
-    <includesfile>../programs/benchmarks/Loops.set</includesfile>
-  </sourcefiles>
-  <sourcefiles name="ProductLines">
-    <includesfile>../programs/benchmarks/ProductLines.set</includesfile>
-  </sourcefiles>
-  <sourcefiles name="Recursive">
-    <includesfile>../programs/benchmarks/Recursive.set</includesfile>
-  </sourcefiles>
-  <sourcefiles name="Sequentialized">
-    <includesfile>../programs/benchmarks/Sequentialized.set</includesfile>
-    <!-- The following files are expected to have timeouts anyway. -->
-    <exclude>../programs/benchmarks/systemc/mem_slave_tlm.3_true.cil.c</exclude>
-    <exclude>../programs/benchmarks/systemc/mem_slave_tlm.4_true.cil.c</exclude>
-    <exclude>../programs/benchmarks/systemc/mem_slave_tlm.5_true.cil.c</exclude>
-    <exclude>../programs/benchmarks/systemc/token_ring.10_true.cil.c</exclude>
-    <exclude>../programs/benchmarks/systemc/token_ring.11_true.cil.c</exclude>
-    <exclude>../programs/benchmarks/systemc/token_ring.12_true.cil.c</exclude>
-    <exclude>../programs/benchmarks/systemc/token_ring.13_true.cil.c</exclude>
-  </sourcefiles>
-  <sourcefiles name="Simple">
-    <includesfile>../programs/benchmarks/Simple.set</includesfile>
-    <option name="-setprop">cpa.predicate.handlePointerAliasing=false</option>
-  </sourcefiles>
-
-  <rundefinition name="ABElf">
-    <option name="-predicateAnalysis-PredAbsRefiner-ABElf-UF" />
-  </rundefinition>
-
-  <rundefinition name="ABEl">
-    <option name="-predicateAnalysis-PredAbsRefiner-ABEl-UF" />
-  </rundefinition>
-
-  <columns>
-    <column title="post" numberOfDigits="1">Time for post operator</column>
-    <column title="path" numberOfDigits="1">Time for path formula creation</column>
-    <column title="precSolving" numberOfDigits="1">Solving time</column>
-    <column title="SMTwoInt" numberOfDigits="1">Total time for SMT solver</column>
-    <column title="Int" numberOfDigits="1">Interpolant computation</column>
-    <column title="refSAT" numberOfDigits="1">Refinement sat check</column>
-  </columns>
-
-</benchmark>
